2019-01-09  Carl Hetherington  <cth@carlh.net>

	* Hopefully improve layout on high-resolution (>2K) displays (#1303).

2019-01-08  Carl Hetherington  <cth@carlh.net>

	* Re-analyse audio when DCP channel count changes (#1189).

	* Fix failure to re-analyse audio when the channel map changes (#1257).

2019-01-06  Carl Hetherington  <cth@carlh.net>

	* Disable subtitle view/font buttons with FFmpeg content (#1236).

	* Fix incorrectly-different IDs between MXF and XML in SMPTE subtitle files.

	* Improve behaviour of hints dialog with long projects (#1439).

	* Fix incorrect video waveform display (#1425).

2019-01-05  Carl Hetherington  <cth@carlh.net>

	* Fix strange behaviour with single-frame fades.

2018-12-29  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-12-23  Carl Hetherington  <cth@carlh.net>

	* Only make DCPs with 48kHz audio (#1436).

2018-12-10  Carl Hetherington  <cth@carlh.net>

	* Accept certificate chains to dcpomatic2_kdm_cli as well
	as single certificates.

2018-12-08  Carl Hetherington  <cth@carlh.net>

	* Prototype system to allow in-place translations.

2018-12-07  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated de_DE translation from Carsten Kurz.

2018-12-01  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-11-28  Carl Hetherington  <cth@carlh.net>

	* Write config.xml with CR/LF terminators on Windows (#1402).

2018-11-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.13.73 released.

2018-11-09  Carl Hetherington  <cth@carlh.net>

	* Allow specification of trusted devices by thumbprint rather than full certificate.

2018-11-07  Carl Hetherington  <cth@carlh.net>

	* Add button to force re-encode of JPEG2000 content.

2018-10-23  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-10-16  Carl Hetherington  <cth@carlh.net>
